Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
Description
I love that import statements are no longer being generated, because it means less "unused imports" warnings from my compiler and checkstyle rules.
However, it appears that the enum generation did not get as much care as class file generation. There still remain some import statements in enum files. All of them are unused because of the fully-qualified types being used instead, so they are safe to delete.
Attachments
Issue Links
- is related to
-
ACCUMULO-4551 Update to thrift-0.10.0
-
- Resolved
-
- links to