THRIFT-4073: enum files are still being generated with unused imports Client: Java Patch: BCG <bgould@users.noreply.github.com>

This closes #1182